# hdmi_matrix_control

./: .gitignore  .isort.cfg  .pylintrc  .travis.yml  MANIFEST.in  MatrixDriver.py  Pipfile  README.md  TESmartMatrix.py  USAGE.md  cmd.py  output.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tmp.py  tox.ini  web.py
hdmi_matrix_controller/: __init__.py  cmd.py  config.py  daemon.py  driver.py  messaging.py  output.py  web.py
hdmi_matrix_controller/hw/: __init__.py  matrix.py  scalemat.py  tesmart.py
hdmi_matrix_controller/static/css/: segment7.css
hdmi_matrix_controller/templates/: index.html
hw/: matrix.py  tesmart.py
templates/: index.html
tests/: __init__.py  test_matrixDriver.py  tmp.py
