# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = hdmi_matrix_controller
author = SCaLE AV Team
author-email = scale-av@lists.linuxfests.org
description = Matrix controller daemon
description-content-type = text/plain
license = GPLv2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/socallinuxexpo/hdmi_matrix_control/
project_urls =
    Bug Tracker = https://github.com/socallinuxexpo/hdmi_matrix_control/issues
    Source Code = https://github.com/socallinuxexpo/hdmi_matrix_control/
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = socallinuxexpo

[options]
include_package_data = True
install_requires =
    pyserial >=3.4, <4.0
    Flask >=1.0.2, <2.0.0
    Flask-RESTful >=0.3.6, <1.0.0
    simplejson >=3.16.0, <4.0.0
packages = find:
requires-python = >=3.5
setup_requires =
    setuptools_scm
zip_safe = False

[options.entry_points]
console_scripts =
    hdmi-mx = hdmi_matrix_controller.cmd:main
